# autocollab_agent_INHA

./: .gitignore  README.md  run_container.sh
docker_env/: Dockerfile  build.sh
sources/agent/agent/install/: local_setup.sh  setup.sh
sources/agent/agent/log/: latest_build
sources/agent/agent/src/macspos/: CMakeLists.txt  package.xml
sources/agent/agent/src/macspos/scripts/: main.py
sources/agent/configs/: config.json  params.json
sources/gazebo_interface/src/gzros2/: CMakeLists.txt  package.xml
sources/gazebo_interface/src/gzros2/scripts/: main.py
sources/gazebo_interface/src/gzros2/scripts/lib_gzros2/: __init__.py  agent.py  base.py  gzros2.py  ros2wrapper.py  swarm.py
sources/gazebo_interface/src/macspos_msgs/: CMakeLists.txt
sources/gazebo_interface/src/macspos_msgs/msg/: AgentExternalState.msg  AgentInternalSetpoint.msg
sources/indoor_interface/install/: local_setup.sh  setup.sh
sources/indoor_interface/install/macspos_msgs/share/macspos_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  package.zsh
sources/indoor_interface/install/mocap4r2_msgs/share/mocap4r2_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  mocap4r2_bridge_mapping_rule.yaml  package.sh  package.xml
sources/indoor_interface/log/: latest_build
sources/indoor_interface/src/macspos_msgs/: package.xml
sources/indoor_interface/src/qcf_interface/: CMakeLists.txt
sources/indoor_interface/src/qcf_interface/scripts/: main.py
sources/launchers/: agent_run.sh  indoor_api_run.sh
(+453 files in other folders)
